LVS success for OTA

--- a/work/Makefile
+++ b/work/Makefile
@@ -12,8 +12,8 @@
 
 PREFIX=
 LIB=JNW_GR05_SKY130A
-CELL=JNW_GR05
-
+#- CELL=JNW_GR05
+CELL = OTA_Manuel
 #- Provide cells you want to check for the lvsall drcall commands
 CELLS = JNW_GR05
 
